2007-03-10  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Kamil Pawlowski  <kamilpe gmail com>

	* gst/subparse/Makefile.am:
	* gst/subparse/gstsubparse.c:
	(gst_sub_parse_data_format_autodetect),
	(gst_sub_parse_format_autodetect), (gst_sub_parse_sink_event),
	(gst_subparse_type_find):
	* gst/subparse/gstsubparse.h:
	* gst/subparse/mpl2parse.c: (mpl2_parse_line), (parse_mpl2):
	* gst/subparse/mpl2parse.h:
	  Add support for MPL2 subtitle format (#413799).

2007-03-09  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	  We require core CVS for the new buffer metadata copy functions.

2007-03-09  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/tag/gstid3tag.c:
	Add read support for GST_TAG_MUSICBRAINZ_SORTNAME (TSOP) tag.
	Fixes #414496.

2007-03-09  Wim Taymans  <wim@fluendo.com>

	* ext/libvisual/visual.c: (gst_visual_sink_setcaps),
	(gst_vis_src_negotiate), (get_buffer), (gst_visual_chain):
	Improve adapter usage and comments.

2007-03-09  Wim Taymans  <wim@fluendo.com>

	* ext/pango/gsttextrender.c: (gst_text_render_chain):
	* ext/vorbis/vorbistag.c: (gst_vorbis_tag_parse_packet):
	* gst-libs/gst/netbuffer/gstnetbuffer.c: (gst_netbuffer_copy):
	Use new metadata copy function.

	* gst/ffmpegcolorspace/gstffmpegcolorspace.c:
	(gst_ffmpegcsp_transform):
	* gst/videoscale/gstvideoscale.c: (gst_video_scale_transform):
	Basetransform copied the metadata for us.

2007-03-09  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/pango/gsttextoverlay.c: (gst_text_overlay_text_event),
	(gst_text_overlay_video_event):
	  Some more logging. Only accept newsegment events in TIME format and
	  send a WARNING message if they are not in TIME format.

	* gst/subparse/gstsubparse.c: (gst_sub_parse_dispose),
	(gst_sub_parse_init), (gst_sub_parse_src_event), (handle_buffer),
	(gst_sub_parse_chain), (gst_sub_parse_sink_event):
	* gst/subparse/gstsubparse.h:
	  No need to allocate GstSegment structure dynamically, just put it